[package]
name = "bili-wbi-sign-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", optional = true }
itertools = "0.10.5"
log = "0.4.18"
md5 = "0.7.0"
reqwest = "0.11.18"
rkyv = "0.7.42"
serde = "1.0.163"
serde_derive = { version = "1.0.163", features = ["deserialize_in_place"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
url = "2.4.0"

[features]
expires_time = ["dep:chrono"]
blocking_req = ["reqwest/blocking"]
default = ["blocking_req", "expires_time"]
